--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -8,8 +8,9 @@
 \begin{document}
 \maketitle
 
-\vspace{-0.3cm}
+\vspace{-0.5cm}
 \section*{Rozdanie 1}
+\vspace{-0.5cm}
 \handdiagramv
         {\vhand{876}{A2}{A752}{J742}}
         {\vhand{AQ43}{KQJT4}{Q}{K83}}
@@ -17,7 +18,7 @@
         {\vhand{T92}{--}{KJT9864}{AT9}}
         {}
 
-\vspace{-0.3cm}
+\vspace{-0.7cm}
 
 \begin{table}[h!]
     \centering
@@ -36,6 +37,8 @@ walet pik zabity asem. Wyszłam w karo obawiając się jedynie odwrotu w
 trefla, który zabrałby mi dojście do lew kierowych i na koniec oddałabym trefla (=).
 Odwrót nastąpił w pika i reszta lew była moja (+2), a obrońcy nie wzięli nawet na asa kier.
 
+\hfill -K
+
 \pagebreak
 \section*{Rozdanie 2}
 \handdiagramv
@@ -49,6 +52,8 @@ Po oczywistej licytacji znalazłam się (\nvul{W}) w kontrakcie 1\nt.
 Obrońcy ściągnęli 4 trefle i wyszli w kiera, ze stołu małe, od S dama, z ręki król.
 S na czwartego trefla wyrzucił pika, co jeszcze mocniej zasugerowało waleta po stronie N,
 zatem zaimpasowałam go. Odwrót S w karo musiałam przejąć asem i pozostało mi jedynie zebrać pika (-2).
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 3}
@@ -76,6 +81,8 @@ wyszedł w pika. \nvul{S} nie zgadł i podłożył waleta.
 Pozostało mu jedynie zaimpasować trefla,
 a jako że impas nie stał, skończył bez 2.
 
+\hfill -K
+
 \pagebreak
 \section*{Rozdanie 4}
 \handdiagramv{\vhand{K7}{QJ75}{75}{KJ542}}
@@ -98,6 +105,13 @@ końcówki kierowej. Zawistowałam w pika, rozgrywający ściągnął atuty i za
 Bartek ściągnął A\diams, do którego Krysia zrzucła \xdiams 3. Bartek (debil) nie ściągnął \xdiams K bo uznał trójkę za markę.
 Nie ściągnęliśmy przez to K\diams, +3.
 
+\hfill -K
+
+No i słusznie uznał 3 za markę wtf, powinnam dać wysokie,
+ale odruchowo dawałam ilościówki do wszystkiego z powodu deficytu punktów.
+
+\hfill -K
+
 \pagebreak
 \section*{Rozdanie 5}
 \handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
@@ -115,10 +129,10 @@ Nie ściągnęliśmy przez to K\diams, +3.
     \end{tabular}
 \end{table}
 
-Wist K\spades.
-Coś głupiego tu się stało ale nie pamiętam.
+Po wiście K\spades moją najlepszą szansą (chyba?) jest zagranie
+na trefle 2-3 i K\clubs u \vul{S}, mimo otwarcia na \vul{N}. Swoje.
 
-
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 6}
@@ -136,6 +150,7 @@ Coś głupiego tu się stało ale nie pamiętam.
         1\diams & \dbl & 1\hearts & 1\spades \\
         \pass & \pass & 2\spades & \pass \\
         3\clubs & \pass & 3\diams \\  
+        all \pass
     \end{tabular}
 \end{table}
 
@@ -143,6 +158,7 @@ Uznałem, że ręka E jest za słaba na dorzucenie końcówki - możemy łatwo o
 Wist \xspades K przepuszczony, następnie \xspades T (??). Krysia wyrzuciła trefla a następnie wzięła 10 lew.
 Należało jednak zauważyć, że kiery są prawie stuprocentowo 4-4, przebić 2 z nich a następnie zagrać na kara 2-2 biorąc 11.
 
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 7}
@@ -158,15 +174,15 @@ Należało jednak zauważyć, że kiery są prawie stuprocentowo 4-4, przebić 2
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
                                 &&& 1\hearts \\
         \pass & 1\spades & 2\clubs & \pass \\
-        \pass & 2\spades
+        \pass & 2\spades & all \pass & \\
     \end{tabular}
 \end{table}
 
 Wznowiłem "tylko" 2\spades oczekując maksymalnie dubla w stole oraz niedzielących się kolorów (wejście z QJ - pewnie ma układ)
-W rozgrywce chyba nic się nie dzieje.
+W rozgrywce chyba nic się nie dzieje.\\
+Wist J\diams.
 
-
-
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 8}
@@ -183,7 +199,8 @@ W rozgrywce chyba nic się nie dzieje.
         \pass & 1\hearts & \pass & 1\spades \\
         \pass & 2\clubs & \dbl & 2\diams \\
         \pass & 2\nt & \pass & 3\spades \\
-        \pass & 4\clubs & \dbl & 4\spades
+        \pass & 4\clubs & \dbl & 4\spades \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
 
@@ -194,9 +211,13 @@ Pojawił się temat kontr wistowych na cue-bidy: przyjęliśmy ustalenie:
     \item \pass = brak kontroli (\rdbl partnera = as)
     \item inny cue = dobrze położony król lub singiel
 \end{itemize}
-Czy to dobre nie wiem ale chyba tak się gra
+Czy to dobre nie wiem ale chyba tak się gra.
 
+\hfill -B
 
+Wist Q\clubs wypuszczał, ale zagrałam kiery z góry licząc że dama spadnie.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 9}
@@ -212,14 +233,21 @@ Czy to dobre nie wiem ale chyba tak się gra
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
         &         1\hearts & \pass & 1\spades \\
         \pass & 2\hearts & \pass & 3\nt \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
 
 Zdecydowałem się na pokazanie 14+ mimo tych waletów, zostałem może i słusznie opierdolony.
 Jednak jestem na pierwszej w korzystnych i otwarcie 2\hearts może być lekko
 naciągane, aby kryć bardzo szeroki przedział multi. Na + jest jednak kolor KQJ, dojście oraz wygląda na to że przeciwnik może łatwo
-dać lewę na wiście.
+dać lewę na wiście.\\
+Wist 8\clubs.
 
+\hfill -B
+
+W rozgrywce nic się nie działo, po wiście 8\clubs wziętym K\clubs oddałam 3 trefle i A\hearts.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 10}
@@ -235,6 +263,7 @@ dać lewę na wiście.
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
         &       &           \pass & \pass \\
         2\clubs & \dbl & \pass & 2\diams \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
 
@@ -245,6 +274,12 @@ Ze stołu blotka karo do \xdiams A i kontynuacja kiera do K i kiera przebitego w
 Ściągnięty \xclubs K (4). Teraz trefl przebity bez sensu siódemką, co oddawało lewę.
 
 Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczywiście tak.
+
+\hfill -B
+
+Przepałowałam, wyszło mi że do 10.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 11}
@@ -257,17 +292,16 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+        \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K)\\
         1\clubs & \pass & 1\spades & \pass \\
         1\nt & \pass & 2\clubs & \pass \\
-        2\spades & \pass & 4\spades \\
+        2\spades & \pass & 4\spades & all \pass \\
     \end{tabular}
 \end{table}
 
 Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \spades J do Q, trefl do Asa, przebitka, claim. 
 
-
-
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 12}
@@ -280,19 +314,20 @@ Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \spades J do Q
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-        1\diams & \pass & 1\spades & \pass \\
-        2\nt & \pass & 3\clubs & \pass \\
-        3\hearts & \pass & 3\spades & \pass \\
-        3\nt & \pass & 4\clubs & \pass \\
-        4\diams & \pass & 4\hearts & \pass \\
-        4\spades \\
+        \nvul{W} & \vul{N} (B) & \nvul{E} & \vul{S} (K)\\
+        -- & 1\diams & \pass & 1\spades \\
+        \pass & 2\nt & \pass & 3\clubs \\
+        \pass & 3\hearts & \pass & 3\spades \\
+        \pass & 3\nt & \pass & 4\clubs\\
+        \pass & 4\diams & \pass & 4\hearts \\
+        \pass & 4\spades & all \pass & \\
     \end{tabular}
 \end{table}
 
 Otwarłem karo z czwórki bo tak się umówiliśmy. Natomiast raczej nie powinienem tak robić z 18-20, tylko z 12-14.
-Dałem 3NT które chciałem do gry, ale niestety było non serious. Na szczęście nie sprowokowałem partnerki zbyt mocno.
+Dałem 3NT które chciałem do gry, ale niestety było Non Serious. Na szczęście nie sprowokowałem partnerki zbyt mocno.
 
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 13}
@@ -306,15 +341,20 @@ Dałem 3NT które chciałem do gry, ale niestety było non serious. Na szczęśc
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-        &         \pass & 1\nt & \pass \\
-        3\nt \\
+        -- & \pass & 1\nt & \pass \\
+        3\nt & all \pass & & \\
     \end{tabular}
 \end{table}
 
 Wist \xhearts 9 nie przemawia do mnie kompletnie. Ale co ja będę gadał, jak 9 wzięła lewę i to jeszcze z dołożoną ilościówką.
 To skończyło rozdanie. Ja bym wyjął karo.
 
+\hfill -B
 
+A taką miałam wenę. Bardzo nie chciałam wypuścić wistem spod figury a u Bartka
+mogłam liczyć na maksymalnie waleta. Natomiast faktycznie mogłam w pika.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 14}
@@ -328,7 +368,7 @@ To skończyło rozdanie. Ja bym wyjął karo.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-        &       &             2\diams & \pass \\
+        -- & -- & 2\diams & \pass \\
         2\nt & \pass & 3\diams & \pass \\
         4\hearts \\
     \end{tabular}
@@ -342,11 +382,14 @@ No i nastąpił kasztan. Pomyślałem o promocji, bo partnerka dołożyła \xhea
 Jednak nie wyszedłem w karo, bojąc się, że to wyjście pod podwójny renons, a W wyrzuci trefla.
 
 Jest to niepoprawne myślenie. Jeśli W nie ma \xclubs K, wyrzuciłby przecież w trzeciej lewie trefla ze stołu, a nie pika.
-Zatem wyjście w karo na pewno nie wypuzcza, a daje możliwość pięknego obłożenia końcówki jako jedyni na sali.
+Zatem wyjście w karo na pewno nie wypuszcza, a daje możliwość pięknego obłożenia końcówki jako jedyni na sali.
 
+\hfill -B
 
+\textbf{{\color{red}I}{\color{orange}l}{\color{LimeGreen}o}{\color{cyan}ś}{\color{blue}c}{\color{purple}i}{\color{red}ó}{\color{orange}w}{\color{LimeGreen}k}{\color{cyan}ę}}
+w karach powinnam zrzucić a nie kasztan. Aczkolwiek nie wiem czy to nie jakiś Lavinthal na K\spades, którego spokojnie mogę mieć.
 
-
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 15}
