--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -376,12 +376,12 @@ mogłam liczyć na maksymalnie waleta. Natomiast faktycznie mogłam w pika.
 
 Niestety odwaliłem tu pajacerkę turnieju. Wist \xdiams 9 do A i trefl do Asa.
 Rozgrywający usunął 2 piki na kara, przeszedł pikiem na stół i zagrał kiera do K i A.
-Tu trochę automatycznie wyszedłem w pika. W zabił królem i zagrał kiera.
+Tu trochę automatycznie wyszedłem w pika. \nvul{W} zabił królem i zagrał kiera.
 
 No i nastąpił kasztan. Pomyślałem o promocji, bo partnerka dołożyła \xhearts 9.
-Jednak nie wyszedłem w karo, bojąc się, że to wyjście pod podwójny renons, a W wyrzuci trefla.
+Jednak nie wyszedłem w karo, bojąc się, że to wyjście pod podwójny renons, a \nvul{W} wyrzuci trefla.
 
-Jest to niepoprawne myślenie. Jeśli W nie ma \xclubs K, wyrzuciłby przecież w trzeciej lewie trefla ze stołu, a nie pika.
+Jest to niepoprawne myślenie. Jeśli \nvul{W} nie ma \xclubs K, wyrzuciłby przecież w trzeciej lewie trefla ze stołu, a nie pika.
 Zatem wyjście w karo na pewno nie wypuszcza, a daje możliwość pięknego obłożenia końcówki jako jedyni na sali.
 
 \hfill -B
@@ -398,7 +398,7 @@ w karach powinnam zrzucić a nie kasztan. Aczkolwiek nie wiem czy to nie jakiś 
 {\vhand{QT8}{J8}{K94}{KQJ92}}
 {\vhand{K3}{T73}{AT873}{T43}}
 {NS}
-
+\vspace{-0.5cm}
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
@@ -411,18 +411,20 @@ w karach powinnam zrzucić a nie kasztan. Aczkolwiek nie wiem czy to nie jakiś 
 
 Wist Q\diams. Zagrałem jak przedszkolak i wsadziłem Króla natychmiast gryząc się w język 
 (choć to nic nie zmienia ale daje szansę na błąd). Oddałem 3 lewy i przyszło trafić pika.
-Biorąc pod uwagę, że jeśli W ma Króla, to E wszedł na 9PC, a W nie podniósł z fitem z niezłym 7PC, zagrałem z góry.
+Biorąc pod uwagę, że jeśli \nvul{W} ma Króla, to \nvul{E} wszedł na 9PC, a \nvul{W} nie podniósł z fitem z niezłym 7PC, zagrałem z góry.
 
-Jest to niepoprawne, gdyż mam więcej przesłanek. Gdyby W miał 4 kiery, raczej nie spasowałby na 2\hearts. Zatem E ma ich 6.
-W nie ma także \xdiams ATxxxx, bo często wszedłby 3\diams. E nie ma ponadto singla trefl (brak wistu).
+Jest to niepoprawne, gdyż mam więcej przesłanek. Gdyby \nvul{W} miał 4 kiery, raczej nie spasowałby na 2\hearts. Zatem \nvul{E} ma ich 6.
+\nvul{W} nie ma także \xdiams ATxxxx, bo często wszedłby 3\diams. \nvul{E} nie ma ponadto singla trefl (brak wistu).
 
-W ten sposób E ma zwykle 1-6-4-2, a karta którą ma zdecydowanie wystarcza na wejście. Zatem przesłanka punktowa jest niewystarczająca.
-E nadal może mieć \hhand{K}{AQxxxx}{QJx}{xxx}, ale jest to mniej prawdopodobne.
+W ten sposób \nvul{E} ma zwykle 1-6-4-2, a karta którą ma zdecydowanie wystarcza na wejście. Zatem przesłanka punktowa jest niewystarczająca.
+\nvul{E} nadal może mieć \hhand{K}{AQxxxx}{QJx}{xxx}, ale jest to mniej prawdopodobne.
 
-Czy W ze swoją kartą nie powinienbył podnieść w 3\hearts? Raczej nie. 
+Czy \nvul{W} ze swoją kartą nie powinienbył podnieść w 3\hearts? Raczej nie. 
 Król pik jest źle położony oraz nie mamy figury w kierach i partner może wypuścić na wiście.
 
 Co ciekawe za 4\spades= było 20\% bo sala wistowała w kiera.
+
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -442,10 +444,14 @@ Co ciekawe za 4\spades= było 20\% bo sala wistowała w kiera.
 \end{table}
 
 Wist 7\clubs. Rozgrywający myśli 3 minuty, po czym bije w stole i gra pika do \xspades T i J. 
-Z braku lepszego pomysłu kontynuuję trefla do przebitki. S gra \xhearts A i blotkę, którą W bije. Następnie ściąga trefle, przebija pika,
-gra karo. S bez sensu wskakuje Królem wypuszczając kontrakt. Jak rozgrywający to przegrał - odeszło w zapomnienie.
+Z braku lepszego pomysłu kontynuuję trefla do przebitki. \nvul{S} gra \xhearts A i blotkę, którą \vul{W} bije. Następnie ściąga trefle, przebija pika,
+gra karo. \nvul{S} bez sensu wskakuje Królem wypuszczając kontrakt. Jak rozgrywający to przegrał - odeszło w zapomnienie.
 
+\hfill -B
 
+Nooo booo mógł mieć singlową Q\diams...
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -458,7 +464,7 @@ gra karo. S bez sensu wskakuje Królem wypuszczając kontrakt. Jak rozgrywający
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+        \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K) \\
         -- & 1\diams & \pass & 1\hearts \\
         \pass & 1\spades & \pass & 2\spades \\
         all \pass & & & \\
@@ -467,7 +473,7 @@ gra karo. S bez sensu wskakuje Królem wypuszczając kontrakt. Jak rozgrywający
 
 Wist 10\clubs. Jakaś nuda. +2.
 
-
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 18}
@@ -498,6 +504,7 @@ Czy dało się to policzyć? Otóż tak!
 
 Wniosek - N ma 5 pików i trzeba wyjść damą. Na szczęście bez konsekwencji.
 
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 19}
@@ -523,6 +530,12 @@ No i wtopa. Wyszedłem nieco automatycznie w pika, bo stwierdziłem, że E na pe
 że S usunie pika z dziadka. Jednak niezależnie od tego, należało zabezpieczyć się grając \xspades K! A następnie trefla, który
 już nie mógł wypuszczać lewy. 
 
+\hfill -B
+
+A ja wyszłam 8\clubs żeby nie sugerować rozgrywającemu tego króla, ale jeśli miałby AQ\clubs
+nie szkodziłoby mu przepuścić, więc mogłam wyjść poprawnie.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -550,13 +563,19 @@ perspektywa natychmiastowego efektownego wyjścia \xclubs K była zbyt kusząca.
 
 Należało puścić, dając S szansę na błędne zagranie do Króla, które przegrywa.
 
+\hfill -B
+
+Czemu ilościówka nie ma sensu...? Akurat miałam i parzyście i trefla więc nie zastanawiałam się
+co chcę zrzucić...
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 21}
-\handdiagramv{\vhand{96532}{A874}{A5}{95}}
-{\vhand{J7}{T3}{K8732}{AKQ8}}
-{\vhand{KQT8}{J96}{Q964}{J7}}
-{\vhand{A4}{KQ52}{JT}{T6432}}
+\handdiagramv{\vhand{KT732}{A98}{652}{AT}}
+{\vhand{6}{KQJ74}{AQ7}{KJ95}}
+{\vhand{AQ95}{T2}{J83}{Q843}}
+{\vhand{J84}{653}{KT94}{762}}
 {NS}
 
 \begin{table}[h!]
@@ -570,7 +589,11 @@ Należało puścić, dając S szansę na błędne zagranie do Króla, które prz
     \end{tabular}
 \end{table}
 
-Wist K\hearts
+Tu puściłam widowiskowo. Wist K\hearts, od partnera 6. Rozgrywający ściągnął atuty, a ja
+mając opór przed wyrzuceniem trefla wyrzuciłam wszystkie kiery.
+Następnie zagrał małe karo, które wzięłam na 7\diams. Byłam pewna, że jestem wpuszczona.
+Wyszłam treflem puszczając lewę. O K\diams mogłam wiedzieć z 6\hearts Bartka, która była
+Lavinthalem, ale nawet o tym nie pomyślałam. Swoje.
 
 \pagebreak
 \section*{Rozdanie 22}
