--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -595,6 +595,10 @@ Następnie zagrał małe karo, które wzięłam na 7\diams. Byłam pewna, że je
 Wyszłam treflem puszczając lewę. O K\diams mogłam wiedzieć z 6\hearts Bartka, która była
 Lavinthalem, ale nawet o tym nie pomyślałam. Swoje.
 
+Aczkolwiek Bartek mógł położyć T\diams zamiast puszczać, wtedy nie mam okazji do pomyłki.
+
+\hfill -K
+
 \pagebreak
 \section*{Rozdanie 22}
 \handdiagramv{\vhand{873}{953}{A543}{AK7}}
@@ -634,7 +638,13 @@ Wist 6\diams
     \end{tabular}
 \end{table}
 
-XD\\
+Po mojej stronie stołu było śmiesznie, nie mogłam sobie wyobrazić rąk przeciwników.
+2\nt było jakieś naturalne, inwitujące, w sumie ucieszyłabym się 2 albo 3\nt.
+Na 4\nt też prawie spasowałam, ale ja bym to musiała grać. 4\nt myślałam, że młode,
+ale i tak uważam, że się dogadaliśmy.\\
+
+\hfill -K
+
 Wist 8\spades
 
 \pagebreak
@@ -656,6 +666,8 @@ Wist 8\spades
 \end{table}
 
 Wist 6\diams, oddane A\diams i przebitka.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 25}
