--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -112,6 +112,8 @@ ale odruchowo dawałam ilościówki do wszystkiego z powodu deficytu punktów.
 
 \hfill -K
 
+Nie ufa się w zrzutki, kiedy widać że on ma dubla a Ty resztę lol. Jestem pajacem i tyle.
+
 \pagebreak
 \section*{Rozdanie 5}
 \handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
@@ -178,9 +180,9 @@ Należało jednak zauważyć, że kiery są prawie stuprocentowo 4-4, przebić 2
     \end{tabular}
 \end{table}
 
+Wist J\diams.
 Wznowiłem "tylko" 2\spades oczekując maksymalnie dubla w stole oraz niedzielących się kolorów (wejście z QJ - pewnie ma układ)
 W rozgrywce chyba nic się nie dzieje.\\
-Wist J\diams.
 
 \hfill -B
 
@@ -299,7 +301,7 @@ Przepałowałam, wyszło mi że do 10.
     \end{tabular}
 \end{table}
 
-Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \spades J do Q, trefl do Asa, przebitka, claim. 
+Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \xspades J do Q, trefl do Asa, przebitka, claim. 
 
 \hfill -B
 
@@ -355,6 +357,10 @@ A taką miałam wenę. Bardzo nie chciałam wypuścić wistem spod figury a u Ba
 mogłam liczyć na maksymalnie waleta. Natomiast faktycznie mogłam w pika.
 
 \hfill -K
+
+Pik może mi podgrywać damę, której rozgrywający nie trafi. Karo żeby wypuszczało to się muszą grube dymy dziać.
+
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 14}
@@ -590,7 +596,7 @@ Wist K\hearts
 \end{table}
 
 1\nt = inwit z fitem, 4333\\
-Wist 6\diams
+Wist 6\diams. Brałem piki i wychodziłem w trefla. Zdziwko jak N pokazał \xclubs AK. Płaskie jak cep.
 
 \pagebreak
 \section*{Rozdanie 23}
@@ -613,6 +619,11 @@ Wist 6\diams
 
 XD\\
 Wist 8\spades
+
+Skok S w końcówkę wywołał niemałą konsternację przy stole. Musi mieć jakiś potężny układ, może 6-5 z renonsem trefl?
+Dużo wskazuje, że Krysia mogłą sobie ubzdurać, że 2NT to cośtam z czerwonymi. Bałem się dać 5\clubs, a 4NT jest dobrym 
+zamezpieczeniem. 
+
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -652,6 +663,8 @@ Wist 6\diams, oddane A\diams i przebitka.
 
 Wist 2\spades\\
 Nie no gość miał 13, dyskusyjne to otwarcie
+++ myślałem że miał 12
+
 
 \pagebreak
 \section*{Rozdanie 26}
@@ -671,8 +684,16 @@ Nie no gość miał 13, dyskusyjne to otwarcie
     \end{tabular}
 \end{table}
 
-Wist 9\clubs\\
+Wist 9\clubs. Zagrany pik do K i A, następnie trefl. Zabiłem Królem (mam wszystkie dojścia), zagrałem trefla.
+
+Trochę gdybanie. Ale może lepiej przepuścić? Skąd rozgrywający ma widzieć, kto ma trefle? 
+Zabicie bardzo sugeruje posiadanie \xdiams QT. Z resztą, N odrzucając impas karo wygrywa!
+
+
+
 Wpisane na złą linię :(
+
+
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -691,6 +712,19 @@ Wpisane na złą linię :(
     \end{tabular}
 \end{table}
 
-Wist 5\diams
+Wist 5\diams wzięty waletem (1). Skoro mam mniej pików, to na pewno ma je S, prawda? 
+Zagrałem kiera, w trakcie czego N wyciągnął kartę z ręki, więc położyłem \xhearts T, która wzięła (2).
+No dobra, teraz to już na 100\% ma piki.
+Zgrywam \xclubs KQ (3), N bije drugiego i gra pika do Asa, S odgrywa pika którego biję Królem (4).
+
+O zgrozo, N dokłada! Dopiero teraz przypomniałem sobie otwarcie 3\diams Giorgi'a i ogarnąłem, że on umie w bloki.
+Rozliczam rozdanie raz jeszcze i gram \xspades 9, licząc na wpust karowy.
+N bije i gra pika do mojej blotki (5).
+
+To umożliwia mi drugą próbę wpustu. Oddaję \xhearts 6 do \xhearts 9. S musi teraz dać mi dostęp do trefli lub lewę kierową, co czyni. (6, 7).
+Noga. Ale z jaką historią!
+
+
+
 
 \end{document}
