--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -631,6 +631,8 @@ Aczkolwiek Bartek mógł położyć T\diams zamiast puszczać, wtedy nie mam oka
 1\nt = inwit z fitem, 4333\\
 Wist 6\diams. Brałem piki i wychodziłem w trefla. Zdziwko jak N pokazał \xclubs AK. Płaskie jak cep.
 
+\hfill -B
+
 \pagebreak
 \section*{Rozdanie 23}
 %%% \handdiagramv{\vhand{T83}{KJ762}{854}{97}}
@@ -663,6 +665,7 @@ Skok S w końcówkę wywołał niemałą konsternację przy stole. Musi mieć ja
 Dużo wskazuje, że Krysia mogłą sobie ubzdurać, że 2NT to cośtam z czerwonymi. Bałem się dać 5\clubs, a 4NT jest dobrym 
 zabezpieczeniem. 
 
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -705,8 +708,11 @@ Wist 6\diams, oddane A\diams i przebitka.
 Wist 2\spades\\
 Nie no gość miał 13, dyskusyjne to otwarcie
 
+\hfill -K
+
 ++ myślałem że miał 12
 
+\hfill -B
 
 \pagebreak
 \section*{Rozdanie 26}
@@ -731,11 +737,11 @@ Wist 9\clubs. Zagrany pik do K i A, następnie trefl. Zabiłem Królem (mam wszy
 Trochę gdybanie. Ale może lepiej przepuścić? Skąd rozgrywający ma widzieć, kto ma trefle? 
 Zabicie bardzo sugeruje posiadanie \xdiams QT. Z resztą, N odrzucając impas karo wygrywa!
 
-
+\hfill -B
 
 Wpisane na złą linię :(
 
-
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -766,7 +772,7 @@ N bije i gra pika do mojej blotki (5).
 To umożliwia mi drugą próbę wpustu. Oddaję \xhearts 6 do \xhearts 9. S musi teraz dać mi dostęp do trefli lub lewę kierową, co czyni. (6, 7).
 Noga. Ale z jaką historią!
 
-
+\hfill -B
 
 
 \end{document}
