--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -10,15 +10,15 @@
 
 \vspace{-0.5cm}
 \section*{Rozdanie 1}
-%%% \vspace{-0.5cm}
-%%% \handdiagramv
-%%%         {\vhand{876}{A2}{A752}{J742}}
-%%%         {\vhand{AQ43}{KQJT4}{Q}{K83}}
-%%%         {\vhand{KJ5}{987653}{3}{Q65}}
-%%%         {\vhand{T92}{--}{KJT9864}{AT9}}
-%%%         {}
+\vspace{-0.5cm}
+\handdiagramv
+        {\vhand{876}{A2}{A752}{J742}}
+        {\vhand{AQ43}{KQJT4}{Q}{K83}}
+        {\vhand{KJ5}{987653}{3}{Q65}}
+        {\vhand{T92}{--}{KJT9864}{AT9}}
+        {}
 
-%%% \vspace{-0.7cm}
+\vspace{-0.7cm}
 
 \begin{table}[h!]
     \centering
@@ -41,12 +41,12 @@ Odwrót nastąpił w pika i reszta lew była moja (+2), a obrońcy nie wzięli n
 
 \pagebreak
 \section*{Rozdanie 2}
-%%% \handdiagramv
-%%%         {\vhand{632}{A765}{Q9}{AK32}}
-%%%         {\vhand{KQT8}{J83}{754}{864}}
-%%%         {\vhand{J94}{QT42}{K86}{QT5}}
-%%%         {\vhand{A75}{K9}{AJT32}{J97}}
-%%%         {NS}
+\handdiagramv
+        {\vhand{632}{A765}{Q9}{AK32}}
+        {\vhand{KQT8}{J83}{754}{864}}
+        {\vhand{J94}{QT42}{K86}{QT5}}
+        {\vhand{A75}{K9}{AJT32}{J97}}
+        {NS}
 
 Po oczywistej licytacji znalazłam się (\nvul{W}) w kontrakcie 1\nt.
 Obrońcy ściągnęli 4 trefle i wyszli w kiera, ze stołu małe, od S dama, z ręki król.
@@ -57,12 +57,12 @@ zatem zaimpasowałam go. Odwrót S w karo musiałam przejąć asem i pozostało 
 
 \pagebreak
 \section*{Rozdanie 3}
-%%% \handdiagramv
-%%%         {\vhand{Q543}{AK5}{Q9}{KJ73}}
-%%%         {\vhand{AT72}{--}{T8542}{Q852}}
-%%%         {\vhand{J96}{JT97432}{J}{A4}}
-%%%         {\vhand{K8}{Q86}{AK763}{T96}}
-%%%         {WE}
+\handdiagramv
+        {\vhand{Q543}{AK5}{Q9}{KJ73}}
+        {\vhand{AT72}{--}{T8542}{Q852}}
+        {\vhand{J96}{JT97432}{J}{A4}}
+        {\vhand{K8}{Q86}{AK763}{T96}}
+        {WE}
 
 \begin{table}[h!]
     \centering
@@ -85,11 +85,11 @@ a jako że impas nie stał, skończył bez 2.
 
 \pagebreak
 \section*{Rozdanie 4}
-%%% \handdiagramv{\vhand{K7}{QJ75}{75}{KJ542}}
-%%% {\vhand{T93}{T2}{AKJ42}{AQ9}}
-%%% {\vhand{AQ654}{AK963}{Q6}{T}}
-%%% {\vhand{J82}{84}{T983}{8763}}
-%%% {NSEW% }
+\handdiagramv{\vhand{K7}{QJ75}{75}{KJ542}}
+{\vhand{T93}{T2}{AKJ42}{AQ9}}
+{\vhand{AQ654}{AK963}{Q6}{T}}
+{\vhand{J82}{84}{T983}{8763}}
+{NSEW}
 
 \begin{table}[h!]
     \centering
@@ -116,11 +116,11 @@ Nie ufa się w zrzutki, kiedy widać że on ma dubla a Ty resztę lol. Jestem pa
 
 \pagebreak
 \section*{Rozdanie 5}
-%%% \handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
-%%% {\vhand{}{AT4}{AQ832}{A8543}}
-%%% {\vhand{JT64}{J82}{T64}{K72}}
-%%% {\vhand{Q75}{753}{KJ97}{Q96}}
-%%% {NS% }
+\handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
+{\vhand{}{AT4}{AQ832}{A8543}}
+{\vhand{JT64}{J82}{T64}{K72}}
+{\vhand{Q75}{753}{KJ97}{Q96}}
+{NS}
 
 \begin{table}[h!]
     \centering
@@ -138,11 +138,11 @@ na trefle 2-3 i K\clubs u \vul{S}, mimo otwarcia na \vul{N}. Swoje.
 
 \pagebreak
 \section*{Rozdanie 6}
-%%% \handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
-%%% {\vhand{J8}{AK654}{97643}{T}}
-%%% {\vhand{9753}{JT93}{Q2}{KQ6}}
-%%% {\vhand{A642}{}{AJ85}{J7432}}
-%%% {EW% }
+\handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
+{\vhand{J8}{AK654}{97643}{T}}
+{\vhand{9753}{JT93}{Q2}{KQ6}}
+{\vhand{A642}{}{AJ85}{J7432}}
+{EW}
 
 \begin{table}[h!]
     \centering
@@ -170,11 +170,11 @@ w ręce i xx\diams x\hearts w stole, nie wiem czy N ma xxx\clubs czy x\diams xx\
 
 \pagebreak
 \section*{Rozdanie 7}
-%%% \handdiagramv{\vhand{KT9652}{T5}{986}{AK}}
-%%% {\vhand{QJ74}{}{KJT5}{QJ754}}
-%%% {\vhand{A3}{A8432}{AQ4}{962}}
-%%% {\vhand{8}{KQJ976}{732}{T83}}
-%%% {NSEW% }
+\handdiagramv{\vhand{KT9652}{T5}{986}{AK}}
+{\vhand{QJ74}{}{KJT5}{QJ754}}
+{\vhand{A3}{A8432}{AQ4}{962}}
+{\vhand{8}{KQJ976}{732}{T83}}
+{NSEW}
 
 \begin{table}[h!]
     \centering
@@ -194,11 +194,11 @@ W rozgrywce chyba nic się nie dzieje. Wist J\diams.\\
 
 \pagebreak
 \section*{Rozdanie 8}
-%%% \handdiagramv{\vhand{A82}{AKJT5}{K83}{K9}}
-%%% {\vhand{53}{82}{A75}{AT8643}}
-%%% {\vhand{KQJT764}{76}{QJ}{J2}}
-%%% {\vhand{9}{Q943}{T9642}{Q75}}
-%%% {% }
+\handdiagramv{\vhand{A82}{AKJT5}{K83}{K9}}
+{\vhand{53}{82}{A75}{AT8643}}
+{\vhand{KQJT764}{76}{QJ}{J2}}
+{\vhand{9}{Q943}{T9642}{Q75}}
+{}
 
 \begin{table}[h!]
     \centering
@@ -229,11 +229,11 @@ Wist Q\clubs wypuszczał, ale zagrałam kiery z góry licząc że dama spadnie.
 
 \pagebreak
 \section*{Rozdanie 9}
-%%% \handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
-%%% {\vhand{9}{T943}{QT73}{A962}}
-%%% {\vhand{K7654}{6}{AK62}{K75}}
-%%% {\vhand{QT832}{A5}{985}{Q84}}
-%%% {EW% }
+\handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
+{\vhand{9}{T943}{QT73}{A962}}
+{\vhand{K7654}{6}{AK62}{K75}}
+{\vhand{QT832}{A5}{985}{Q84}}
+{EW}
 
 \begin{table}[h!]
     \centering
@@ -259,11 +259,11 @@ W rozgrywce nic się nie działo, po wiście 8\clubs wziętym K\clubs oddałam 3
 
 \pagebreak
 \section*{Rozdanie 10}
-%%% \handdiagramv{\vhand{652}{A843}{K975}{A5}}
-%%% {\vhand{AQ8}{T652}{A863}{82}}
-%%% {\vhand{JT9}{J7}{QT42}{KT64}}
-%%% {\vhand{K743}{KQ9}{J}{QJ973}}
-%%% {NSEW% }
+\handdiagramv{\vhand{652}{A843}{K975}{A5}}
+{\vhand{AQ8}{T652}{A863}{82}}
+{\vhand{JT9}{J7}{QT42}{KT64}}
+{\vhand{K743}{KQ9}{J}{QJ973}}
+{NSEW}
 
 \begin{table}[h!]
     \centering
@@ -291,11 +291,11 @@ Przepałowałam, wyszło mi że do 10.
 
 \pagebreak
 \section*{Rozdanie 11}
-%%% \handdiagramv{\vhand{Q643}{T}{A5432}{865}}
-%%% {\vhand{AJT85}{AK93}{97}{J4}}
-%%% {\vhand{9}{J8742}{JT86}{AQ9}}
-%%% {\vhand{K72}{Q65}{KQ}{KT732}}
-%%% {% }
+\handdiagramv{\vhand{Q643}{T}{A5432}{865}}
+{\vhand{AJT85}{AK93}{97}{J4}}
+{\vhand{9}{J8742}{JT86}{AQ9}}
+{\vhand{K72}{Q65}{KQ}{KT732}}
+{}
 
 \begin{table}[h!]
     \centering
@@ -313,11 +313,11 @@ Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \xspades J do 
 
 \pagebreak
 \section*{Rozdanie 12}
-%%% \handdiagramv{\vhand{A82}{Q72}{AKJT}{KJ5}}
-%%% {\vhand{T7}{K83}{Q932}{9762}}
-%%% {\vhand{KJ964}{A4}{654}{A84}}
-%%% {\vhand{Q53}{JT965}{87}{QT3}}
-%%% {NS% }
+\handdiagramv{\vhand{A82}{Q72}{AKJT}{KJ5}}
+{\vhand{T7}{K83}{Q932}{9762}}
+{\vhand{KJ964}{A4}{654}{A84}}
+{\vhand{Q53}{JT965}{87}{QT3}}
+{NS}
 
 \begin{table}[h!]
     \centering
@@ -339,11 +339,11 @@ Dałem 3NT które chciałem do gry, ale niestety było Non Serious. Na szczęśc
 
 \pagebreak
 \section*{Rozdanie 13}
-%%% \handdiagramv{\vhand{T7654}{653}{J73}{82}}
-%%% {\vhand{KQ}{T742}{KT8}{AJT4}}
-%%% {\vhand{82}{AQ9}{A965}{K763}}
-%%% {\vhand{AJ93}{KJ8}{Q42}{Q95}}
-%%% {NSEW% }
+\handdiagramv{\vhand{T7654}{653}{J73}{82}}
+{\vhand{KQ}{T742}{KT8}{AJT4}}
+{\vhand{82}{AQ9}{A965}{K763}}
+{\vhand{AJ93}{KJ8}{Q42}{Q95}}
+{NSEW}
 
 \begin{table}[h!]
     \centering
@@ -370,11 +370,11 @@ Pik może mi podgrywać damę, której rozgrywający nie trafi. Karo żeby wypus
 
 \pagebreak
 \section*{Rozdanie 14}
-%%% \handdiagramv{\vhand{52}{AQ}{T9643}{JT84}}
-%%% {\vhand{AT43}{J87643}{Q}{32}}
-%%% {\vhand{QJ87}{T92}{A82}{Q65}}
-%%% {\vhand{K96}{K5}{KJ75}{AK97}}
-%%% {% }
+\handdiagramv{\vhand{52}{AQ}{T9643}{JT84}}
+{\vhand{AT43}{J87643}{Q}{32}}
+{\vhand{QJ87}{T92}{A82}{Q65}}
+{\vhand{K96}{K5}{KJ75}{AK97}}
+{}
 
 \begin{table}[h!]
     \centering
@@ -405,11 +405,11 @@ w karach powinnam zrzucić a nie kasztan. Aczkolwiek nie wiem czy to nie jakiś 
 
 \pagebreak
 \section*{Rozdanie 15}
-%%% \handdiagramv{\vhand{AJ96542}{K5}{2}{A87}}
-%%% {\vhand{7}{AQ9642}{QJ65}{65}}
-%%% {\vhand{QT8}{J8}{K94}{KQJ92}}
-%%% {\vhand{K3}{T73}{AT873}{T43}}
-%%% {NS}
+\handdiagramv{\vhand{AJ96542}{K5}{2}{A87}}
+{\vhand{7}{AQ9642}{QJ65}{65}}
+{\vhand{QT8}{J8}{K94}{KQJ92}}
+{\vhand{K3}{T73}{AT873}{T43}}
+{NS}
 % \vspace{-0.5cm}
 \begin{table}[h!]
     \centering
@@ -440,11 +440,11 @@ Co ciekawe za 4\spades= było 20\% bo sala wistowała w kiera.
 
 \pagebreak
 \section*{Rozdanie 16}
-%%% \handdiagramv{\vhand{AJ32}{T7}{QT8}{8754}}
-%%% {\vhand{6}{K854}{AJ53}{AJT2}}
-%%% {\vhand{K95}{A96}{K97642}{3}}
-%%% {\vhand{QT874}{QJ32}{}{KQ96}}
-%%% {EW% }
+\handdiagramv{\vhand{AJ32}{T7}{QT8}{8754}}
+{\vhand{6}{K854}{AJ53}{AJT2}}
+{\vhand{K95}{A96}{K97642}{3}}
+{\vhand{QT874}{QJ32}{}{KQ96}}
+{EW}
 
 \begin{table}[h!]
     \centering
@@ -467,11 +467,11 @@ Nooo booo mógł mieć singlową Q\diams...
 
 \pagebreak
 \section*{Rozdanie 17}
-%%% \handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
-%%% {\vhand{43}{K8642}{T92}{JT7}}
-%%% {\vhand{KT95}{QT95}{AJ7}{64}}
-%%% {\vhand{QJ2}{AJ7}{843}{AQ92}}
-%%% {% }
+\handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
+{\vhand{43}{K8642}{T92}{JT7}}
+{\vhand{KT95}{QT95}{AJ7}{64}}
+{\vhand{QJ2}{AJ7}{843}{AQ92}}
+{}
 
 \begin{table}[h!]
     \centering
@@ -489,11 +489,11 @@ Wist 10\clubs. Jakaś nuda. +2.
 
 \pagebreak
 \section*{Rozdanie 18}
-%%% \handdiagramv{\vhand{96532}{A874}{A5}{95}}
-%%% {\vhand{J7}{T3}{K8732}{AKQ8}}
-%%% {\vhand{KQT8}{J96}{Q964}{J7}}
-%%% {\vhand{A4}{KQ52}{JT}{T6432}}
-%%% {NS% }
+\handdiagramv{\vhand{96532}{A874}{A5}{95}}
+{\vhand{J7}{T3}{K8732}{AKQ8}}
+{\vhand{KQT8}{J96}{Q964}{J7}}
+{\vhand{A4}{KQ52}{JT}{T6432}}
+{NS}
 
 \begin{table}[h!]
     \centering
@@ -520,11 +520,11 @@ Wniosek - N ma 5 pików i trzeba wyjść damą. Na szczęście bez konsekwencji.
 
 \pagebreak
 \section*{Rozdanie 19}
-%%% \handdiagramv{\vhand{7}{JT654}{K874}{J73}}
-%%% {\vhand{A863}{K7}{QT9}{KT84}}
-%%% {\vhand{Q94}{A832}{AJ}{A952}}
-%%% {\vhand{KJT52}{Q9}{6532}{Q6}}
-%%% {EW% }
+\handdiagramv{\vhand{7}{JT654}{K874}{J73}}
+{\vhand{A863}{K7}{QT9}{KT84}}
+{\vhand{Q94}{A832}{AJ}{A952}}
+{\vhand{KJT52}{Q9}{6532}{Q6}}
+{EW}
 
 \begin{table}[h!]
     \centering
@@ -551,11 +551,11 @@ nie szkodziłoby mu przepuścić, więc mogłam wyjść poprawnie.
 
 \pagebreak
 \section*{Rozdanie 20}
-%%% \handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
-%%% {\vhand{T52}{8742}{65}{AJ54}}
-%%% {\vhand{QJ76}{K}{Q842}{T973}}
-%%% {\vhand{K984}{J63}{AJ73}{K2}}
-%%% {NSEW% }
+\handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
+{\vhand{T52}{8742}{65}{AJ54}}
+{\vhand{QJ76}{K}{Q842}{T973}}
+{\vhand{K984}{J63}{AJ73}{K2}}
+{NSEW}
 
 \begin{table}[h!]
     \centering
@@ -584,11 +584,11 @@ co chcę zrzucić...
 
 \pagebreak
 \section*{Rozdanie 21}
-%%% \handdiagramv{\vhand{KT732}{A98}{652}{AT}}
-%%% {\vhand{6}{KQJ74}{AQ7}{KJ95}}
-%%% {\vhand{AQ95}{T2}{J83}{Q843}}
-%%% {\vhand{J84}{653}{KT94}{762}}
-%%% {NS% }
+\handdiagramv{\vhand{KT732}{A98}{652}{AT}}
+{\vhand{6}{KQJ74}{AQ7}{KJ95}}
+{\vhand{AQ95}{T2}{J83}{Q843}}
+{\vhand{J84}{653}{KT94}{762}}
+{NS}
 
 \begin{table}[h!]
     \centering
@@ -613,11 +613,11 @@ Aczkolwiek Bartek mógł położyć T\diams zamiast puszczać, wtedy nie mam oka
 
 \pagebreak
 \section*{Rozdanie 22}
-%%% \handdiagramv{\vhand{873}{953}{A543}{AK7}}
-%%% {\vhand{9}{K762}{KT862}{JT4}}
-%%% {\vhand{KJT64}{AQ8}{Q97}{92}}
-%%% {\vhand{AQ52}{JT4}{J}{Q8653}}
-%%% {EW% }
+\handdiagramv{\vhand{873}{953}{A543}{AK7}}
+{\vhand{9}{K762}{KT862}{JT4}}
+{\vhand{KJT64}{AQ8}{Q97}{92}}
+{\vhand{AQ52}{JT4}{J}{Q8653}}
+{EW}
 
 \begin{table}[h!]
     \centering
@@ -635,11 +635,11 @@ Wist 6\diams. Brałem piki i wychodziłem w trefla. Zdziwko jak N pokazał \xclu
 
 \pagebreak
 \section*{Rozdanie 23}
-%%% \handdiagramv{\vhand{T83}{KJ762}{854}{97}}
-%%% {\vhand{AK652}{T5}{T62}{A86}}
-%%% {\vhand{QJ974}{93}{AKQ93}{Q}}
-%%% {\vhand{}{AQ84}{J7}{KJT5432}}
-%%% {NSEW% }
+\handdiagramv{\vhand{T83}{KJ762}{854}{97}}
+{\vhand{AK652}{T5}{T62}{A86}}
+{\vhand{QJ974}{93}{AKQ93}{Q}}
+{\vhand{}{AQ84}{J7}{KJT5432}}
+{NSEW}
 
 \begin{table}[h!]
     \centering
@@ -669,11 +669,11 @@ zabezpieczeniem.
 
 \pagebreak
 \section*{Rozdanie 24}
-%%% \handdiagramv{\vhand{QJ}{J3}{AQ432}{JT98}}
-%%% {\vhand{KT96}{AK75}{KJ8}{K2}}
-%%% {\vhand{83}{Q8642}{6}{Q7654}}
-%%% {\vhand{A7542}{T9}{T975}{A3}}
-%%% {% }
+\handdiagramv{\vhand{QJ}{J3}{AQ432}{JT98}}
+{\vhand{KT96}{AK75}{KJ8}{K2}}
+{\vhand{83}{Q8642}{6}{Q7654}}
+{\vhand{A7542}{T9}{T975}{A3}}
+{}
 
 \begin{table}[h!]
     \centering
@@ -691,11 +691,11 @@ Wist 6\diams, oddane A\diams i przebitka.
 
 \pagebreak
 \section*{Rozdanie 25}
-%%% \handdiagramv{\vhand{AQ852}{A7}{T52}{754}}
-%%% {\vhand{T9}{KT643}{K43}{K92}}
-%%% {\vhand{J4}{95}{AQJ986}{AJT}}
-%%% {\vhand{K763}{QJ82}{7}{Q863}}
-%%% {EW% }
+\handdiagramv{\vhand{AQ852}{A7}{T52}{754}}
+{\vhand{T9}{KT643}{K43}{K92}}
+{\vhand{J4}{95}{AQJ986}{AJT}}
+{\vhand{K763}{QJ82}{7}{Q863}}
+{EW}
 
 \begin{table}[h!]
     \centering
@@ -716,11 +716,11 @@ Nie no gość miał 13, dyskusyjne to otwarcie
 
 \pagebreak
 \section*{Rozdanie 26}
-%%% \handdiagramv{\vhand{K6}{QT654}{A95}{QJ6}}
-%%% {\vhand{AJ73}{J9872}{2}{T94}}
-%%% {\vhand{QT852}{A3}{KJ843}{A}}
-%%% {\vhand{94}{K}{QT76}{K87532}}
-%%% {NSEW% }
+\handdiagramv{\vhand{K6}{QT654}{A95}{QJ6}}
+{\vhand{AJ73}{J9872}{2}{T94}}
+{\vhand{QT852}{A3}{KJ843}{A}}
+{\vhand{94}{K}{QT76}{K87532}}
+{NSEW}
 
 \begin{table}[h!]
     \centering
@@ -745,11 +745,11 @@ Wpisane na złą linię :(
 
 \pagebreak
 \section*{Rozdanie 27}
-%%% \handdiagramv{\vhand{Q743}{2}{AQ9532}{AT}}
-%%% {\vhand{62}{873}{J64}{98653}}
-%%% {\vhand{AT5}{KJ954}{T}{J742}}
-%%% {\vhand{KJ98}{AQT6}{K87}{KQ}}
-%%% {% }
+\handdiagramv{\vhand{Q743}{2}{AQ9532}{AT}}
+{\vhand{62}{873}{J64}{98653}}
+{\vhand{AT5}{KJ954}{T}{J742}}
+{\vhand{KJ98}{AQT6}{K87}{KQ}}
+{}
 
 \begin{table}[h!]
     \centering
