--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -102,17 +102,23 @@ a jako że impas nie stał, skończył bez 2.
 
 Otwarcie 1\nt zablokowało przeciwników, którzy bez ustaleń nie znaleźli
 końcówki kierowej. Zawistowałam w pika, rozgrywający ściągnął atuty i zaimpasował trefla,
-Bartek ściągnął A\diams, do którego Krysia zrzucła \xdiams 3. Bartek (debil) nie ściągnął \xdiams K bo uznał trójkę za markę.
+Bartek ściągnął A\diams, do którego Krysia zrzuciła \xdiams 3. Bartek (debil) nie ściągnął \xdiams K bo uznał trójkę za markę.
 Nie ściągnęliśmy przez to K\diams, +3.
 
 \hfill -KB
 
-No i słusznie uznał 3 za markę wtf, powinnam dać wysokie,
+No i słusznie uznał 3 za markę, powinnam dać wysokie,
 ale odruchowo dawałam ilościówki do wszystkiego z powodu deficytu punktów.
 
 \hfill -K
 
 Nie ufa się w zrzutki, kiedy widać że on ma dubla a Ty resztę lol. Jestem pajacem i tyle.
+
+\hfill -B
+
+Wtf, mam pozycję na markę i tyle XD
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 5}
@@ -359,7 +365,7 @@ To skończyło rozdanie. Ja bym wyjął karo.
 
 \hfill -B
 
-A taką miałam wenę. Bardzo nie chciałam wypuścić wistem spod figury a u Bartka
+A taką miałam wenę. Bardzo nie chciałam wypuścić wistem spod figury, a u Bartka
 mogłam liczyć na maksymalnie waleta. Natomiast faktycznie mogłam w pika.
 
 \hfill -K
@@ -567,7 +573,7 @@ nie szkodziłoby mu przepuścić, więc mogłam wyjść poprawnie.
     \end{tabular}
 \end{table}
 
-Wist 6\hearts, pasywny, od partnerki \xhearts 2. Natychmiast bioirę to za lavinthala (ilościówka nie ma sensu).
+Wist 6\hearts, pasywny, od partnerki \xhearts 2. Natychmiast biorę to za lavinthala (ilościówka nie ma sensu).
 Rozgrywający gra karo z ręki.
 
 Widzę, że trefle jadą. Policzyłem lewy jeśli puszczę: 2 piki, 5 kierów i karo = 8. Niewiedzieć czemu jednak 
